Added playGame feature, model class and a new form into the view

--- a/app/views/game/new.html.haml
+++ b/app/views/game/new.html.haml
@@ -4,3 +4,10 @@
 %table#code-table
 
 %table#guesses-table
+
+=form_tag game_playing_path :method => :post do
+	= text_field_tag "firstCell"
+	= text_field_tag "secondCell"
+	= text_field_tag "thirdCell"
+	= text_field_tag "fourthCell"
+	= submit_tag 'Guess!', :id => 'guess_submit'
