A lot of changes: - Added a model class for guesses - Changed the default secret code - Adapted the controller to get GameGuess from model - view send the guess to the controller, and get results back Pending - view guessed code hardwired - rspec pending for the new model class

--- a/app/views/game/playing.html.haml
+++ b/app/views/game/playing.html.haml
@@ -1,2 +1,11 @@
 %h1 Game#playing
 %p Find me in app/views/game/playing.html.haml
+%table#code-table
+
+%table#guesses-table
+  - if not @game_guesses.nil?
+    - @game_guesses.each do |guess|
+      %tr
+      - guess.code.each_char do |c|
+        %td= c.to_s
+
