--- a/app/views/game/start.html.haml
+++ b/app/views/game/start.html.haml
@@ -10,4 +10,5 @@
     = text_field_tag "secondCell"
     = text_field_tag "thirdCell"
     = text_field_tag "fourthCell"
+    = hidden_field_tag "guessed_code", "ABCD"
     = submit_tag 'Guess!', :id => 'guess_submit'
