--- a/app/views/game/playing.html.haml
+++ b/app/views/game/playing.html.haml
@@ -3,9 +3,18 @@
 %table#code-table
 
 %table#guesses-table
-  - if not @game_guesses.nil?
-    - @game_guesses.each do |guess|
+  - if not @game.nil?
+    - @game.game_guesses.each do |guess|
       %tr
       - guess.code.each_char do |c|
         %td= c.to_s
+        
+=form_tag game_playing_path :method => :post  do
+  = hidden_field_tag "game_id" , @game.id if @game
+  = text_field_tag "firstCell", ' ' 
+  = text_field_tag "secondCell", ' ', :onChange => 'calculate();'
+  = text_field_tag "thirdCell", ' ' , :onChange => 'calculate();'
+  = text_field_tag "fourthCell", ' ' , :onChange => 'calculate();'
+  = hidden_field_tag "guessed_code", "DCBA"
+  = submit_tag 'Guess!', :id => 'guess_submit'
 
