--- a/app/views/game/playing.html.haml
+++ b/app/views/game/playing.html.haml
@@ -11,10 +11,9 @@
         
 =form_tag game_playing_path :method => :post  do
   = hidden_field_tag "game_id" , @game.id if @game
-  = text_field_tag "code[0]", ' '
-  = text_field_tag "code[1]", ' '  
-  = text_field_tag "code[2]", ' ' 
-  = text_field_tag "code[3]", ' ' 
-  = hidden_field_tag "guessed_code", "DCBA"
+  = select_tag "code[0]", options_for_select(['A','B','C','D','E','F'])
+  = select_tag "code[1]", options_for_select(['A','B','C','D','E','F'])
+  = select_tag "code[2]", options_for_select(['A','B','C','D','E','F'])
+  = select_tag "code[3]", options_for_select(['A','B','C','D','E','F'])
   = submit_tag 'Guess!', :id => 'guess_submit'
 
