--- a/app/views/game/playing.html.haml
+++ b/app/views/game/playing.html.haml
@@ -8,6 +8,7 @@
       %tr
       - guess.code.each_char do |c|
         %td= c.to_s
+      %td= guess.result
         
 =form_tag game_playing_path :method => :post  do
   = hidden_field_tag "game_id" , @game.id if @game
